test_suite/alan-2022-examples/failing/009390_mutation.alan
source while 11 do relax end begin relax end
